package com.example;

/**
 * 本类由: Risky 创建于: 15/12/14.
 */
public interface Observer {

    void update(String msg);
}
